--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
             <div class="content ps-lg-5">
               <h3>DigitoBits Trading</h3>
               <p>
-                DigitoBits Trading is an ICT company that was founded in October 2022 in a dorm room in Lusaka, Zambia. The company's main focus is on software development, website designing, graphic designing, network installation, software/hardware supply, digital marketing, and consultations in different fields utilizing Information Technology.
+                DigitoBits Trading is an ICT company that was founded in October 2022 in Lusaka, Zambia. The company's main focus is on software development, website designing, graphic designing, network installation, software/hardware supply, digital marketing, and consultations in different fields utilizing Information Technology.
               </p>
               <ul>
                 <li><i class="bi bi-check-circle-fill"></i> Website design: DigitoBits Trading can design and develop beautiful and user-friendly websites.</li>
