--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
     
           </div>
-        </section><!-- End Our Services Section -->>
+        </section><!-- End Our Services Section -->
 
     
     <!-- ======= Features Section ======= -->
